<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_trip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bitmap_pager"
    android:paddingBottom="16dp"
    tools:context="zhao.pary.timer.AddTripActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_submit"
        style="@style/fabMenu"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="submitInfo"
        android:src="@mipmap/ic_check_circle_black_36dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fab_submit"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_16"
        android:paddingRight="@dimen/dimen_16"
        android:paddingTop="@dimen/dimen_24">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_title"
                style="@style/etTripItemCreate"
                android:hint="@string/trip_title_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_target"
                style="@style/etTripItemCreate"
                android:hint="@string/trip_target_hint" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip_date_start_end" />

            <TextView
                android:id="@+id/tv_time_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="end"
                android:onClick="setTripStartTime"
                android:paddingBottom="@dimen/dimen_08"
                android:paddingEnd="@dimen/dimen_32"
                android:paddingStart="@dimen/dimen_00"
                android:paddingTop="@dimen/dimen_16"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_time_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="end"
                android:onClick="setTripEndTime"
                android:paddingBottom="@dimen/dimen_16"
                android:paddingEnd="@dimen/dimen_32"
                android:paddingStart="@dimen/dimen_00"
                android:paddingTop="@dimen/dimen_08"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
