<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bitmap_woody"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:layout_collapseMode="parallax"
    app:layout_collapseParallaxMultiplier="0.7">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/target_line_one_margin_top"
        android:layout_toStartOf="@+id/space_line_one_center"
        android:background="@drawable/shape_target_input"
        android:elevation="@dimen/target_input_elevation"
        android:outlineProvider="background">

        <EditText
            android:id="@+id/et_money"
            style="@style/tvMoneyTargetDetail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/target_input_height"
            android:layout_toStartOf="@+id/iv_money_target_done"
            android:hint="@string/target_money" />

        <ImageView
            android:id="@+id/iv_money_target_done"
            android:layout_width="@dimen/target_input_height"
            android:layout_height="@dimen/target_input_height"
            android:layout_alignParentEnd="true"
            android:background="@drawable/shape_left_rect_right_corner"
            android:contentDescription="@null"
            android:padding="@dimen/target_iv_padding"
            android:src="@mipmap/ic_done_white_24dp" />

    </RelativeLayout>

    <Space
        android:id="@+id/space_line_one_center"
        android:layout_width="@dimen/dimen_16"
        android:layout_height="@dimen/target_input_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/target_line_one_margin_top" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_16"
        android:layout_marginTop="@dimen/target_line_one_margin_top"
        android:layout_toEndOf="@+id/space_line_one_center"
        android:background="@drawable/shape_target_input"
        android:elevation="@dimen/target_input_elevation"
        android:outlineProvider="background">

        <ImageView
            android:id="@+id/iv_money_append_remove"
            android:layout_width="@dimen/target_input_height"
            android:layout_height="@dimen/target_input_height"
            android:layout_alignParentStart="true"
            android:background="@drawable/shape_left_corner_right_rect"
            android:contentDescription="@null"
            android:padding="@dimen/target_iv_padding"
            android:src="@mipmap/ic_remove_white_24dp" />

        <EditText
            android:id="@+id/et_money_append"
            style="@style/tvMoneyTargetDetail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/target_input_height"
            android:layout_toEndOf="@+id/iv_money_append_remove"
            android:layout_toStartOf="@+id/iv_money_append_add"
            android:hint="@string/target_money_append" />

        <ImageView
            android:id="@+id/iv_money_append_add"
            android:layout_width="@dimen/target_input_height"
            android:layout_height="@dimen/target_input_height"
            android:layout_alignParentEnd="true"
            android:background="@drawable/shape_left_rect_right_corner"
            android:contentDescription="@null"
            android:padding="@dimen/target_iv_padding"
            android:src="@mipmap/ic_add_white_24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space_line_one_center"
        android:layout_marginBottom="@dimen/dimen_120"
        android:layout_marginEnd="@dimen/dimen_16"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/target_time_margin_top"
        android:background="@drawable/shape_target_input"
        android:elevation="@dimen/target_input_elevation"
        android:outlineProvider="background">

        <TextView
            android:id="@+id/tv_time_start"
            android:layout_width="match_parent"
            android:layout_height="@dimen/target_time_height"
            android:layout_toStartOf="@+id/iv_time_center"
            android:gravity="center"
            android:hint="@string/target_time_start"
            android:maxLines="1"
            android:textColor="@color/target_text"
            android:textColorHint="@color/target_text_hint"
            android:textSize="@dimen/target_time_tv_size" />

        <ImageView
            android:id="@+id/iv_time_center"
            android:layout_width="@dimen/target_time_iv_width"
            android:layout_height="@dimen/target_time_iv_width"
            android:layout_centerHorizontal="true"
            android:background="@color/target_btn_done"
            android:contentDescription="@null"
            android:padding="@dimen/target_time_iv_padding"
            android:src="@mipmap/ic_swap_horiz_white_24dp" />

        <TextView
            android:id="@+id/tv_time_end"
            android:layout_width="match_parent"
            android:layout_height="@dimen/target_time_height"
            android:layout_toEndOf="@+id/iv_time_center"
            android:gravity="center"
            android:hint="@string/target_time_end"
            android:maxLines="1"
            android:textColor="@color/target_text"
            android:textColorHint="@color/target_text_hint"
            android:textSize="@dimen/target_time_tv_size" />


    </RelativeLayout>

</RelativeLayout>
